# IACLIB

./: .gitignore  README.md  requirements.md  specifications.md  test.c
analysis/: CMakeLists.txt
analysis/data/: param.yaml
analysis/inc/: node.hpp  platform.hpp
analysis/src/: main.cpp  merge.cpp  node.cpp  platform.cpp
lib/: CMakeLists.txt  CMakeLists1.txt  README.md  cnn_ops.c  cnn_ops.h  conv.c  conv.h  fc.c  main.c  maxpool.c  maxpool.h  tools.c  tools.h
lib/inc/: activation.h  conv.h  data.h  fc.h  images.h  inference.h  pooling.h  read_mnist.h  tools.h
lib/model/: model_parameters.csv
lib/model/MNIST/: biases_training.csv  kernels_training.csv  t10k-images-idx3-ubyte  weights_training.csv
lib/model/TEST/: model_parameters_test.csv
lib/model/test/: create_matrix.py  kernel.csv  matrix.csv
lib/src/: activation.c  avg_pooling.c  conv.c  fc.c  inference.c  main.c  max_pooling.c  min_pooling.c  pooling.c  read_mnist.c  tools.c
lib/tests/: read_mnist.hpp  test.c  test.cpp  test_act.c  test_conv.cpp  test_fc.cpp  test_main.cpp  test_mnist.cpp  test_pooling.cpp  test_tools.cpp  test_tools.hpp  unit_tests.cpp
lib/tests/mnist_dataset/: get_model.py  read_mnist.cpp  test_mnist.cpp  weights_biases.csv
